--- a/css/1280.css
+++ b/css/1280.css
@@ -1,4 +1,39 @@
 @media only screen and (max-width: 1279px){}
+.text-page .max-wrap {
+	padding: 30px 30px 30px 200px;
+}
+.text-page .max-wrap .full-width {
+	margin-left: -200px;
+	margin-right: -30px;
+}
+
+/*social*/
+.soc {
+	width: 200px;
+	padding-bottom: 25px;
+	padding-left: 30px;
+}
+/*social end*/
+
+/*note*/
+.note,
+.more {
+	padding-right: 30px;
+	margin-right: -30px;
+}
+/*note end*/
+
+/*blockquote*/
+.user-content blockquote {
+	padding-right: 30px;
+	margin-right: -30px;
+}
+/*blockquote end*/
+
+/*breadcrumbs*/
+.user-content .breadcrumbs{ padding-left: 30px; }
+/*breadcrumbs end*/
+
 /*tabs*/
 .tab-controls li, .user-content .tab-controls li, .user-content .tab-controls li:first-child {
 	font-size: 30px;
