--- a/css/480.css
+++ b/css/480.css
@@ -125,6 +125,57 @@ h1,
 .previews__inner{ height: auto !important; }
 /*previews end*/
 
+/*locate*/
+.locate{
+	padding: 190px 20px 20px;
+	min-height: 568px;
+}
+.locate-controls{
+	left: 20px;
+	top: 20px;
+	font-size: 18px;
+	line-height: 24px;
+}
+.map-show .locate-controls {
+	display: none;
+}
+.locate-controls a{
+	float: none;
+	display: block;
+	text-align: center;
+}
+.locate-adr__item,
+.locate-cont__item {
+	font-size: 18px;
+	line-height: 26px;
+}
+.locate-cont__item dt {
+	min-width: 65px;
+}
+.locate-cont__item .locate__tel + dd {
+	font-size: 24px;
+	line-height: 26px;
+	position: relative;
+}
+.see-map{
+	right: 18px;
+	top: 18px;
+	width: 56px;
+	height: 56px;
+}
+/*locate*/
+
+/*contacts form*/
+.contacts-form{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.contacts-form h3{
+	font-size: 30px;
+	line-height: 40px;
+}
+/*contacts form end*/
+
 /*SIDEBAR*/
 .sidebar{ width: 100%; }
 /*main navigation*/
@@ -181,6 +232,26 @@ h1,
 .footer-nav__col.no-space {
 	padding-left: 30px;
 	padding-right: 30px;
+}
+.footer-nav__list,
+.user-content .footer-nav__list,
+.footer-nav__title{
+	font-size: 0;
+	letter-spacing: -4px;
+}
+.footer-nav__list li{
+	display: inline-block;
+	vertical-align: top;
+	width: 49.98%;
+}
+.footer-nav__list li,
+.user-content .footer-nav__list li,
+.user-content .footer-nav__list li:first-child,
+.footer-nav__title{
+	padding: 0 0 12px;
+
+	font-size: 20px;
+	letter-spacing: normal;
 }
 /*footer nav end*/
 
