--- a/css/480.css
+++ b/css/480.css
@@ -125,6 +125,25 @@ h1,
 .previews__inner{ height: auto !important; }
 /*previews end*/
 
+/*news*/
+.news,
+.news__content{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.load-more__icon{
+	width: 70px;
+	height: 70px;
+}
+.load-more__icon [class*="depict-"]{
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform: translate(-50%, -50%) scale(0.8, 0.8);
+	-ms-transform: translate(-50%, -50%) scale(0.8, 0.8);
+	transform: translate(-50%, -50%) scale(0.8, 0.8);
+}
+/*news end*/
+
 /*locate*/
 .locate{
 	padding: 190px 20px 20px;
