--- a/css/640.css
+++ b/css/640.css
@@ -118,6 +118,23 @@ textarea{
 }
 /*tabs end*/
 
+/*news*/
+.new__date{
+	text-align: right;
+	padding: 0 0 0 110px;
+	margin: 0 0 28px;
+}
+.news__img {
+	position: absolute;
+	left: 61px;
+	top: 0;
+	height: 64px;
+	width: 62px;
+	box-sizing: border-box;
+}
+.news__img img{ min-height: 100%; }
+/*news end*/
+
 /*FILTERS*/
 .filters-opener{
 	display: block;
