--- a/css/all.css
+++ b/css/all.css
@@ -3882,24 +3882,66 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	text-align: right;
 	padding-right: 0;
 }
-.desktop .site-developer a:hover{ text-decoration: none; }
-.site-developer a .text-inner{ text-decoration: none; }
-.desktop .site-developer a:hover .text-inner{ text-decoration: underline; }
-.site-developer_logo{
+.desktop .developer a:hover{ text-decoration: none; }
+.developer a .text-inner{ text-decoration: none; }
+.desktop a:hover .text-inner{ text-decoration: none; }
+.developer_logo{
+	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	background: url(../img/logo-developer-2x.png) no-repeat top left;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 149px;
-	height: 21px;
+	width: 154px;
+	height: 20px;
+	overflow: hidden;
 	text-align: left;
 	text-indent: -9999px;
-	overflow: hidden;
-	-webkit-transition: opacity 0.2s;
-	transition: opacity 0.2s;
 }
-.no-backgroundsize .site-developer_logo{ background-image: url(../img/logo-developer.png); }
+.developer_logo:before,
+.developer_logo:after{
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 149px;
+	height: 16px;
+	-webkit-transition-property: background-color;
+	transition-property: background-color;
+	-webkit-transition-duration: 0.6s;
+	transition-duration: 0.6s;
+}
+.developer_logo:before{
+	content: '';
+	position: absolute;
+	left: 4px;
+	top: 4px;
+	background-color: transparent;
+	background-image:
+			linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black),
+			linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black);
+	background-size:2px 2px;
+	background-position:0 0, 1px 1px;
+}
+.no-cssgradient .developer_logo:before,
+.no-multiplebgs .developer_logo:before{
+	background: #000;
+	opacity: 0.5;
+	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+.developer_logo:after{
+	content: '';
+	position: absolute;
+	background: #00ef85 url(../img/logo-developer-2x.png) no-repeat center center;
+	-webkit-background-size: auto 16px;
+	background-size: auto 16px;
+}
+.no-backgroundsize .developer_logo:after{
+	background-image: url(../img/logo-developer.png);
+}
+.desktop a:hover .developer_logo:after{
+	background-color: #fff;
+	-webkit-transition-duration: 3s;
+	transition-duration: 3s;
+}
 /*footer holder end*/
 /*FOOTER end*/
 
