--- a/css/widgets.css
+++ b/css/widgets.css
@@ -2,7 +2,7 @@
 	--- WIDGETS CONTAINS --- 
 
 	Responsive tabs;
-	Custom select (ui multiselect);
+	jQuery MultiSelect UI Widget 1.13;
 	Swiper slider;
 */
 
