--- a/css/sp.css
+++ b/css/sp.css
@@ -24,7 +24,8 @@
 .depict-close-h{ background-position: 0 -588px; width: 20px; height: 20px; }
 .depict-play{ background-position: 0 -628px; width: 11px; height: 13px; }
 .depict-play-h{ background-position: 0 -661px; width: 11px; height: 13px; }
-
+.depict-arrow-down{ background-position: 0 -694px; width: 8px; height: 12px; }
+.depict-arrow-down-h{ background-position: 0 -726px; width: 8px; height: 12px; }
 
 /*icons end*/
 
