--- a/css/all.css
+++ b/css/all.css
@@ -13,6 +13,20 @@
 /*normalize end*/
 
 /*------ TYPOGRAPHIC STYLES ------*/
+/*.no-scroll-no html,
+.no-scroll body {
+	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
+	overflow: hidden;
+}
+.no-scroll body {
+	padding-right: 17px;
+}*/
+.page{
+	overflow: auto;
+	height: 100%;
+}
 body{
 	font: 16px/30px 'helvetica-neue-cyr-light', Arial, Helvetica, sans-serif;
 	height: 100%;
@@ -3095,22 +3109,37 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .popup{
 	position: fixed;
 	left: 240px;
-	top: 100px;
+	top: 0;
 	right: 0;
 	bottom: 0;
+	min-height: 50px;
 	background: #fff;
-	border-top: 1px solid #f7f7f7;
 	box-sizing: border-box;
-	overflow: auto;
 	z-index: 6;
+	display: none;
+}
+.popup:before{
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 50px;
+	width: 100%;
+	box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.15);
 }
 .popup .btn-close{
 	opacity: 1;
 	visibility: visible;
 }
+.popup .btn-close:active{
+	-webkit-transform: scale(0.9, 0.9);
+	-ms-transform: scale(0.9, 0.9);
+	transform: scale(0.9, 0.9);
+}
 .popup-overflow{
 	max-height: 100%;
 	overflow: auto;
+	position: relative;
 }
 .popup-align{
 	padding: 45px 0 50px;
@@ -3143,10 +3172,10 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	border-radius: 3px;
 }
 
-.product-card__gallery.fotorama--fullscreen .fotorama__stage,
-.product-card__gallery.fotorama--fullscreen .fotorama__thumb{
-	border: none;
-	border-radius: 0;
+.product-card__gallery.fotorama--fullscreen,
+.product-card__gallery.fotorama--fullscreen .fotorama__nav,
+.product-card__gallery.fotorama--fullscreen .fotorama__stage {
+	background: #fff;
 }
 .product-card__gallery.fotorama--fullscreen .fotorama__thumb-border{
 	border: none;
