--- a/css/480.css
+++ b/css/480.css
@@ -195,6 +195,13 @@ h1,
 }
 /*contacts form end*/
 
+/*popup*/
+.product-card {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+/*popup end*/
+
 /*SIDEBAR*/
 .sidebar{ width: 100%; }
 /*main navigation*/
@@ -243,14 +250,11 @@ h1,
 
 /*FOOTER*/
 /*footer nav*/
-.footer-nav__col {
+.footer-nav__col,
+.footer-nav__col.no-space {
 	width: auto;
 	display: block;
 	padding: 0 20px 30px;
-}
-.footer-nav__col.no-space {
-	padding-left: 30px;
-	padding-right: 30px;
 }
 .footer-nav__list,
 .user-content .footer-nav__list,
