--- a/css/640.css
+++ b/css/640.css
@@ -57,16 +57,21 @@ textarea{
 	width: auto;
 	position: relative !important;
 	top: auto !important;
-	visibility: visible !important;
-	opacity: 1 !important;
 }
 .header-show .soc.fixed {
 	-webkit-transform: translate(0, 0) !important;
 	-ms-transform: translate(0, 0) !important;
 	transform: translate(0, 0) !important;
 }
-.soc-list, .user-content .soc-list {
-	overflow: hidden;
+.soc-list,
+.user-content .soc-list {
+	width: 100%;
+}
+.soc-list:after,
+.user-content .soc-list:after {
+	content: '';
+	display: block;
+	clear: both;
 }
 .soc-list li, .user-content .soc-list li, .user-content .soc-list li:first-child {
 	float: left;
@@ -87,6 +92,7 @@ textarea{
 	border-width: 1px 0;
 	width: 100%;
 	background: #fff;
+	margin: 0 0 20px;
 }
 .tab-controls li,
 .user-content .tab-controls li,
@@ -134,6 +140,16 @@ textarea{
 }
 .news__img img{ min-height: 100%; }
 /*news end*/
+
+/*video section*/
+.video-slider .swipe-title {
+	margin-top: -65px;
+	font-size: 18px;
+	line-height: 24px;
+	max-width: 220px;
+	max-height: 48px;
+}
+/*video section end*/
 
 /*SIDEBAR*/
 .nav-drop__group {
